⚙️ - Fix Netlify CMS sections config

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -33,5 +33,5 @@ collections:
             name: 'sections'
             widget: 'list'
             fields:
-              - { label: 'Title', name: 'title', widget: 'area' }
+              - { label: 'Title', name: 'title', widget: 'string' }
               - { label: 'Content', name: 'content', widget: 'markdown' }
