--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -7,7 +7,7 @@ public_folder: /img
 
 collections:
   - name: 'companies'
-    label: 'companies'
+    label: 'Companies'
     folder: 'assets/content/companies'
     create: true
     format: 'json'
