--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "license": "MIT",
   "dependencies": {
     "@nuxtjs/markdownit": "^1.2.6",
+    "gray-matter": "^4.0.2",
+    "markdown-it": "^10.0.0",
     "nuxt": "^2.0.0"
   },
   "devDependencies": {
@@ -24,6 +26,8 @@
     "eslint-config-prettier": "^4.1.0",
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-vue": "^5.2.3",
+    "html-loader": "^0.5.5",
+    "markdown-loader": "^5.1.0",
     "node-sass": "^4.12.0",
     "prettier": "^1.16.4",
     "sass-loader": "^8.0.0"
