--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -16,7 +16,7 @@ collections:
     label: 'Companies'
     folder: 'assets/content/companies'
     create: true
-    format: 'json'
+    format: 'md'
     slug: '{{slug}}'
     editor:
       preview: false
