--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@nuxtjs/markdownit": "^1.2.6",
     "gray-matter": "^4.0.2",
+    "gsap": "^2.1.3",
     "markdown-it": "^10.0.0",
     "nuxt": "^2.0.0"
   },
