--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,8 @@
 {
-  "extends": ["plugin:prettier/recommended"],
+  "extends": ["plugin:vue/recommended", "plugin:prettier/recommended"],
   "parserOptions": { "sourceType": "module", "ecmaVersion": 2017 },
   "rules": {
+    "prettier/prettier": "error",
     "vue/no-v-html": 0
   }
 }
