--- a/package.json
+++ b/package.json
@@ -24,14 +24,10 @@
     "nuxt": "^2.14.6"
   },
   "devDependencies": {
-    "eslint": "^6.4.0",
-    "eslint-config-prettier": "^4.3.0",
-    "eslint-plugin-prettier": "^3.1.1",
-    "eslint-plugin-vue": "^5.2.3",
     "html-loader": "^0.5.5",
     "markdown-loader": "^5.1.0",
-    "node-sass": "^4.13.1",
     "prettier": "^1.16.4",
+    "sass": "^1.49.9",
     "sass-loader": "^8.0.0"
   },
   "headMeta": {
